# SonicSabotage

./: .gitconfig  .gitignore  README.md
android/SonicSabotage/app/: build.gradle  proguard-rules.pro
android/SonicSabotage/app/src/main/: AndroidManifest.xml
android/SonicSabotage/app/src/main/java/tech/detourne/sonic/: DetourneActivity.java  ScannerActivity.java  SplashScreenActivity.java
android/SonicSabotage/app/src/main/java/tech/detourne/sonic/adapter/: DevicesAdapter.java  ExtendedBluetoothDevice.java
android/SonicSabotage/app/src/main/java/tech/detourne/sonic/profile/: DetourneManager.java  DetourneManagerCallbacks.java  OnTaskCompleted.java
android/SonicSabotage/app/src/main/java/tech/detourne/sonic/utils/: UpdateManager.java  Utils.java
android/SonicSabotage/app/src/main/java/tech/detourne/sonic/viewmodels/: DetourneViewModel.java  ScannerLiveData.java  ScannerViewModel.java  SingleLiveEvent.java
android/SonicSabotage/app/src/main/res/layout/: activity_blinky.xml
android/SonicSabotage/app/src/main/res/values/: colors.xml  strings.xml
android/SonicSabotage/app/src/main/res/values-fr/: strings.xml
esp32/fw/: sdkconfig  sdkconfig.old
esp32/fw/components/gatts_ble/: Kconfig  gatts_ble.c
esp32/fw/components/gatts_ble/include/: gatts_ble.h
esp32/fw/components/gpio_handler/: gpio_handler.c
esp32/fw/components/gpio_handler/include/: gpio_handler.h
esp32/fw/components/iap_update/: iap.c
esp32/fw/components/iap_update/include/: iap.h
esp32/fw/components/wifi_connect/: Kconfig  wifi_connect.c
esp32/fw/components/wifi_connect/include/: wifi_connect.h
esp32/fw/main/: main.c
linux/sonicbluez/: Makefile.am  README  configure.ac  notes.txt  sonic
linux/sonicbluez/client/: agent.c  agent.h  app_api.c  app_api.h  ble_api.c  ble_api.h  gatt.c  gatt.h  main.c  util.c  util.h  uuid.c  wifi.c  wifi.h
pcb/rev1/: dropbuzzer-cache.lib  dropbuzzer.bak  dropbuzzer.kicad_pcb  dropbuzzer.kicad_pcb-bak  dropbuzzer.net  dropbuzzer.sch  dropbuzzer.xml
pcb/rev1/buzzer_lib.pretty/: buzzer.kicad_mod  nn.kicad_mod
pcb/rev1/dropbuzzer_gerbers/: dropbuzzer-B.Cu.gbr  dropbuzzer-B.Mask.gbr  dropbuzzer-B.SilkS.gbr  dropbuzzer-Edge.Cuts.gbr  dropbuzzer-F.Cu.gbr  dropbuzzer-F.Mask.gbr  dropbuzzer-F.SilkS.gbr  dropbuzzer-PTH-drl_map.gbr  dropbuzzer-PTH.drl
pcb/rev2/: dropbuzzer-cache.lib  dropbuzzer-rescue.lib  dropbuzzer.bak  dropbuzzer.kicad_pcb  dropbuzzer.kicad_pcb-bak  dropbuzzer.net  dropbuzzer.pro  dropbuzzer.sch  fp-info-cache  report.txt  sym-lib-table
pcb/rev2/buzzer_lib.pretty/: 9v_holder.kicad_mod  EG1224.kicad_mod  VIA-0.6mm.kicad_mod  VIA-1.8mm.kicad_mod  tl3305.kicad_mod
pcb/rev2/dropbuzzer_gerbers/: dropbuzzer-B.Cu.gbr  dropbuzzer-B.Mask.gbr  dropbuzzer-B.SilkS.gbr  dropbuzzer-Edge.Cuts.gbr  dropbuzzer-F.Cu.gbr  dropbuzzer-F.Fab.gbr  dropbuzzer-F.Mask.gbr  dropbuzzer-F.Paste.gbr  dropbuzzer-F.SilkS.gbr  dropbuzzer-NPTH-drl_map.gbr  dropbuzzer-NPTH.drl  dropbuzzer-PTH-drl_map.gbr  dropbuzzer-PTH.drl
pcb/rev2/rescue-backup/: dropbuzzer-2018-08-18-15-53-16.pro  dropbuzzer-cache-2018-08-18-15-53-16.lib
